GH-9 Implement see other users in community page
