# Game-Hub/game-Hub-be/game-Hub/src/main/java/gamehub/game_Hub/Controller/CommunityController.java
@@ -1,0 +1,30 @@
+package gamehub.game_Hub.Controller;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+import gamehub.game_Hub.Common.PageResponse;
+import gamehub.game_Hub.Response.UserCommunityResponse;
+import gamehub.game_Hub.Service.CommunityService;
+import lombok.RequiredArgsConstructor;
+
+@RestController
+@RequestMapping("community")
+@RequiredArgsConstructor
+public class CommunityController {
+
+  private final CommunityService communityService;
+
+  @GetMapping("/find/all/users")
+  public ResponseEntity<PageResponse<UserCommunityResponse>> findAllUsers(Authentication connectedUser,
+      @RequestParam(name = "page", defaultValue = "0", required = false) int page,
+      @RequestParam(name = "size", defaultValue = "10", required = false) int size) {
+    return ResponseEntity.ok(communityService.findAllUsers(connectedUser,page,size));
+
+  }
+
+}
