# Game-Hub/game-Hub-be/game-Hub/src/main/java/gamehub/game_Hub/Response/UserCommunityResponse.java
@@ -1,0 +1,27 @@
+package gamehub.game_Hub.Response;
+
+import java.util.Set;
+
+import gamehub.game_Hub.Module.User.Status;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class UserCommunityResponse {
+
+  private Long userId;
+  private String username;
+  private LocationResponse location;
+  private Status status;
+  private byte [] userProfilePicture;
+  private String profileColor;
+
+
+}
