# Game-Hub/game-Hub-fe/src/app/services/api.module.ts
@@ -12,6 +12,7 @@ import { LibraryControllerService } from './services/library-controller.service'
 import { AuthenticationService } from './services/authentication.service';
 import { WishlistControllerService } from './services/wishlist-controller.service';
 import { LocationControllerService } from './services/location-controller.service';
+import { CommunityControllerService } from './services/community-controller.service';
 import { CardColorControllerService } from './services/card-color-controller.service';
 
 /**
@@ -28,6 +29,7 @@ import { CardColorControllerService } from './services/card-color-controller.ser
     AuthenticationService,
     WishlistControllerService,
     LocationControllerService,
+    CommunityControllerService,
     CardColorControllerService,
     ApiConfiguration
   ],
